2011-01-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Add test coverage for deleted header files.
	* tests/depcomp6.test, tests/depcomp7.test: Update tests to
	also check for the deleted header bug.  If no dependency
	tracking mechanism could be found, SKIP rather than exit
	successfully.  Use GNU style spacing and ANSI C prototypes.

	Fix typos in Rule.pm comments.
	* lib/Automake/Rule.pm: Fix typos in comments.

	docs: split 'amhello Explained' node.
	* doc/automake.texi (amhello Explained): Split node ...
	(amhello's configure.ac Setup Explained)
	(amhello's Makefile.am Setup Explained) : ... into these two.
	(Top, Hello World): Adjust, and add @anchor for stable URL links.
	Suggestion by Karl Berry in automake bug#7766.

2011-01-08  Karl Berry  <karl@freefriends.org>
	    Eric Blake  <eblake@redhat.com>

	docs: reference defining directories in amhello node.
	* doc/automake.texi (amhello Explained): Point to Autoconf
	manual for how to convert directory values into macros.
	(Optional): Fix grammar nit.

2011-01-02   Stefano Lattarini  <stefano.lattarini@gmail.com>

	* NEWS: Fix typo (forgotten word).

2011-01-02   Stefano Lattarini  <stefano.lattarini@gmail.com>
	     Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	docs: how to work around checks on invalid primary/directory couples
	* doc/automake.texi (Uniform): Document the blessed idiom which can
	be used to work around automake checks on invalid primary/directory
	couples (such as `lib_PROGRAMS' or `doc_LIBRARIES').

2011-01-02  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Sync auxiliary files from upstream.
	* lib/config.guess, lib/config.sub, lib/texinfo.tex:
	Sync from upstream.

	Fix maintainer-check regression.
	* tests/subobj11a.test: Pass DISTCHECK_CONFIGURE_FLAGS in the
	environment.

	Bump copyright years.
	* aclocal.in (write_aclocal, version): Bump copyright years.
	* automake.in (gen_copyright, version): Likewise.
	* doc/automake.texi: Likewise.
