@@ -1,3 +1,8 @@
+2011-01-09   Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	automake: minor fixes in comments
+	* automake.in: Some minor fixes and enhancements in comments.
+
 2011-01-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Add test coverage for deleted header files.
